// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 2`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 3`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {
            "color": "#c3c6cc",
            "height": 48.75,
            "paddingLeft": 8.125,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#c3c6cc",
            "height": 20,
            "width": 20,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 4`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#c3c6cc",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#c3c6cc",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#c3c6cc"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#c3c6cc",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {
            "color": "#c3c6cc",
            "height": 48.75,
            "paddingLeft": 8.125,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#c3c6cc",
            "height": 20,
            "width": 20,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 5`] = `
<View
  style={
    Object {
      "marginBottom": 16.25,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#de350b",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#c3c6cc"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#c3c6cc",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 16.25,
          "paddingBottom": 16.25,
          "paddingTop": 16.25,
          "textAlignVertical": "top",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 20,
            "justifyContent": "center",
            "width": 20,
          },
          Object {
            "color": "#c3c6cc",
            "height": 48.75,
            "paddingLeft": 8.125,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#de350b",
            "height": 20,
            "width": 20,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 13.487499999999999,
        "fontWeight": "500",
        "height": 13.487499999999999,
        "lineHeight": 13.487499999999999,
        "marginTop": 8.125,
      }
    }
  >
    error
  </Text>
</View>
`;
